Fix the font loading + realize that `gap` for flexbox is stable

--- a/src/theme/theme.css
+++ b/src/theme/theme.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700;1,400;2,600&display=swap");
-
 :root {
   --font-default: "Montserrat", sans-serif;
 
@@ -26,4 +24,8 @@
     #6850b0 67.28%,
     #5466b4 84.75%
   );
+}
+
+html {
+  font-family: var(--font-default);
 }
